--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,36 @@
 
 		<!-- Favicon -->
 		<link rel="icon" href="favicon.ico" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="./dist/img/favicon/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./dist/img/favicon/favicon-32x32"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="./dist/img/favicon/favicon-16x16"
+		/>
+		<link rel="manifest" href="/site.webmanifest" />
+		<meta name="msapplication-TileColor" content="#da532c" />
+		<meta name="theme-color" content="#ffffff" />
+
+		<!-- Custom Font -->
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Michroma:wght@400&display=swap"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Michroma&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 
 	<body class="template-projects has-navigation">
