--- a/run.html
+++ b/run.html
@@ -35,6 +35,26 @@
 
 		<!-- Favicon -->
 		<link rel="icon" href="favicon.ico" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="./dist/img/favicon/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./dist/img/favicon/favicon-32x32"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="./dist/img/favicon/favicon-16x16"
+		/>
+		<link rel="manifest" href="/site.webmanifest" />
+		<meta name="msapplication-TileColor" content="#da532c" />
+		<meta name="theme-color" content="#ffffff" />
 
 		<!-- Custom Font -->
 		<link
