Add custom fonts to html

--- a/history.html
+++ b/history.html
@@ -59,6 +59,15 @@
 		<meta name="msapplication-TileColor" content="#da532c" />
 		<meta name="theme-color" content="#ffffff" />
 
+		<!-- Custom Font -->
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Michroma:wght@400&display=swap"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Michroma&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 
 	<body class="template-history has-navigation is-loading">
