--- a/query/index.html
+++ b/query/index.html
@@ -15,6 +15,16 @@
 		<script src="../configUser.js" async onload="loadClient()"></script>
 		<script src="query.js" defer></script>
 
+		<!-- Custom Font -->
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Michroma:wght@400&display=swap"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Michroma&display=swap"
+			rel="stylesheet"
+		/>
+
 		<!-- Styles -->
 		<link
 			rel="stylesheet"
