--- a/run.html
+++ b/run.html
@@ -58,7 +58,11 @@
 
 		<!-- Custom Font -->
 		<link
-			href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap"
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Michroma:wght@400&display=swap"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Michroma&display=swap"
 			rel="stylesheet"
 		/>
 	</head>
