--- a/run.html
+++ b/run.html
@@ -8,13 +8,7 @@
 
 		<title>Run</title>
 
-		<!-- Scripts -->
-		<script src="dist/js/loadClient.js" defer></script>
-		<script src="configUser.js" defer onload="loadClient()"></script>
-		<script src="dist/js/sidebar.js" defer></script>
-		<script src="dist/js/run.js" defer></script>
-		<script src="dist/js/ui.js" defer></script>
-		<script src="dist/js/core.js" defer></script>
+		
 
 		<!-- Core Styles -->
 		<link rel="stylesheet" type="text/css" href="dist/css/reset.css" />
@@ -67,7 +61,7 @@
 		/>
 	</head>
 
-	<body class="template-run">
+	<body class="template-run" onload="loadClient()">
 		<main class="content-wrap">
 			<aside
 				id="content-navigation"
@@ -176,5 +170,12 @@
 				Close Menu
 			</button>
 		</main>
+		<!-- Scripts -->
+		<script src="configUser.js"></script>
+		<script src="dist/js/ui.js"></script>
+		<script src="dist/js/core.js"></script>
+		<script src="dist/js/run.js"></script>
+		<script src="dist/js/loadClient.js"></script>
+		<script src="dist/js/sidebar.js"></script>
 	</body>
 </html>
